cluster/apps/dns/blocky/blocky-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blocky
  namespace: dns-test
  labels:
    app: blocky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blocky
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: blocky
        name: blocky
    spec:
      containers:
      - name: blocky
        image: spx01/blocky:v0.15
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 4000
          protocol: TCP
        - name: dns-tcp
          containerPort: 53
          protocol: TCP
        - name: dns-udp
          containerPort: 53
          protocol: UDP
        livenessProbe:
          tcpSocket:
            port: 4000
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 4000
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        startupProbe:
          tcpSocket:
            port: 4000
          timeoutSeconds: 1
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 30
        volumeMounts:
        - name: blocky-config
          mountPath: /app/config.yml
          subPath: config.yml
      restartPolicy: Always
      volumes:
      - name: blocky-config
        configMap:
          name: blocky-config
          defaultMode: 420
