cluster/apps/dns/blocky/blocky-tcp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blocky-tcp
  namespace: dns-test
  labels:
    app: blocky
  annotations:
    metallb.universe.tf/address-pool: services
    metallb.universe.tf/allow-shared-ip: blocky-svc
spec:
  selector:
    app: blocky
  ports:
  - name: http
    port: 4000
    protocol: TCP
    targetPort: http
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: dns-tcp
  # sessionAffinity: None
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: 192.168.178.180
