cluster/apps/dns/blocky/blocky-udp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blocky-udp
  namespace: dns-test
  labels:
    app: blocky
  annotations:
    metallb.universe.tf/address-pool: services
    metallb.universe.tf/allow-shared-ip: blocky-svc
spec:
  selector:
    app: blocky
  ports:
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: dns-udp
  # sessionAffinity: None
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: 192.168.178.180
